--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <section>
         <header>Hedör</header>
         <div>kontent</div>
+        <div>kontent</div>
     </section>
 </body>
 </html>
