update-JS,new folder, +1css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <title>Csortmunka</title>
 </head>
 <body>
-    <section>
+    <section id="Base">
         <header>Hedör</header>
-        <div>kontent</div>
         <div>kontent</div>
     </section>
 </body>
