--- a/hack.html
+++ b/hack.html
@@ -5,21 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/hackstyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="script/animation.js"></script>
-    <title>Document</title>
+    <title>hack</title>
 </head>
 <body>
+  <div class="hackbanner" id="hack-1">
+    <div class="overlay"></div>
+    <div class="content">
+      <div class="close-btn" onclick="togglePopup()">&times;</div>
+      <h1>FIZES MOST!!</h1>
+      <h2>külömben minden adatot törlünk!</h2>
+          <p id="szv">utalás ide: x*wfdg-afv442</p>
+          <p id="nwtime">adatok törlése # timer</p>
+    </div>
+  </div>
 
-  <div class="hackbanner">
-    <h1>Fizes Most!!</h1>
-    <p>utalás ide: x*wfdg-afv442</p><br><p>adatok törlése # timer</p>
+  <div class="hackbanner2" id="hack-2">
+    <div class="overlay"></div>
+    <div class="content">
+      <i class="fa fa-database" style="font-size:200px;color:red"></i>
+      <div id="hacklodbar2"></div>
+    </div>
   </div>
   
-  <div class="hackponit">
-    <div id="lodbar"></div>
- </div>
+  <div class="loader" id="hackloop"></div>
+  <button onclick="togglePopup()" id="btnstart">START HACK</button>
+  <button onclick="x1()" id="btnstart">+1</button>
 
-  <button onclick="togglePopup()">Show Popup</button>
-  <button onclick="progres()">TESTone</button>
+  <section>
+    <div id="led1" class="led">A</div> <div id="led2" class="led">B</div> <div id="led3" class="led">C</div>
+    <input type="number" id="tip1"> <input type="number" id="tip1"> <input type="number" id="tip1">
+  </section>
+
 </body>
 </html>
+
+
+
